# esp32p4-android-auto

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README.ru.md  partitions.csv  partitions_16mb.csv  sdkconfig.defaults  sdkconfig.defaults.jc4880  sdkconfig.defaults.waveshare
3d-model/: cover-TPU.stl  esp32-p4-wifi6-waveshare-800x480.step  insert.stl  main.stl  u-holder.stl
Super_VESC_Display/: Super_VESC_Display.guiguider  Super_VESC_Display.guiguider.cockpit-20260506-121131  Super_VESC_Display.guiguider.cockpit-20260506-133111
Super_VESC_Display/custom/: custom.c  custom.h  dashboard_theme.c  dashboard_theme.h  lisp_editor.c  realtime_viewer.c  settings_wrapper.c  settings_wrapper.h  theme_dashboard_amber.c  theme_generic.c  theme_generic.h  theme_ref.c  theme_ref.h  trip_statistics.c  vesc_tool_menu.c
Super_VESC_Display/payalne vesc dashboard/: VESC Dashboard.html  app.jsx  dash-bluetooth.jsx  dash-bundle.jsx  dash-mode.jsx  dash-shared.jsx  dash-v1-cockpit.jsx
Super_VESC_Display/temp/: board.h
Super_VESC_Display/tools/: build_amber_dashboard.py  build_cockpit_guiguider.py  convert_ta_to_label.py  patch_amber_polish.py  patch_cockpit_dashboard.py  regen_cockpit_fonts.py
components/bt_agent_fw/: CMakeLists.txt  bt_agent_fw.c  bt_agent_fw.h
components/dev_settings/: CMakeLists.txt  app_fs.c  dev_settings.c  vesc_battery_calc.c  vesc_head2.c  vesc_stubs.c  vesc_trip_persist.c
components/esp32_p4_wifi6_touch_lcd_4_3/: esp32_p4_wifi6_touch_lcd_4_3.c  idf_component.yml
components/trip_log/: CMakeLists.txt  (+1 more)
components/vesc_ui/: CMakeLists.txt  grid_480_stub.c  vesc_ui.c
components/vesc_ui/custom/: custom.c  settings_wrapper.c
components/vesc_ui/include/: vesc_ui.h
flutter-application/: .gitignore  README.md  pubspec.yaml
main/: CMakeLists.txt  Kconfig.projbuild  aa_certs.h  aa_frame.c  aa_frame.h  aa_handshake.c  aa_handshake.h  aa_overlay.c  aa_overlay.h  aa_proto.c  aa_proto.h  aa_service.c  aa_service.h  aa_tls.c  aa_tls.h  aa_x509_patch.c  ble_host.c  ble_host.h  ble_nus.c  ble_nus.h  ble_ota.c  ble_ota.h  board.h  bt_agent_ota.c  bt_agent_ota.h  bt_link.c  bt_link.h  config.h  display_init.c  display_video.c  display_video.h  files_http.c  files_http.h  files_screen.c  h264_pipe.c  h264_pipe.h  idf_component.yml  idle_screen.c  idle_screen.h  lv_conf.h  (+23 more)
release/: flash.bat  flash.command  flash.py
scripts/: build_board.sh  capture.sh  gen_dashboard_themes.py  ota_push.sh  release.sh  stage_firmware_asset.sh
tools/: gen_vesc_config.py
(+62 files in other folders)
